# currency-exchange-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
core/: settings.py  urls.py
currency_exchange/: admin.py  models.py  serializers.py  urls.py  views.py
currency_exchange/tests/: test_models.py  test_serializers.py  test_views.py
